# aNode

./: .gitignore  .gitmodules  NOTICE  README.md  env.example  rust-cloudflare.md
app/: README.md  next.config.js  package.json  pnpm-lock.yaml
cloudflare-demo/: Cargo.toml  wrangler.toml
cloudflare-demo/src/: lib.rs
cloudflare-js-worker/: package.json  wrangler.toml
cloudflare-js-worker/src/: index.js
cloudflare-rust-simple/: Cargo.toml  wrangler.toml
cloudflare-rust-simple/src/: lib.rs
cloudflare-worker/: Cargo.toml  wrangler.toml
cloudflare-worker/src/: lib.rs
docs/: ArchitecturalAnalysis.md  Changes.md  DEPLOY.md  DetailedSystemDesign.md  PaymasterServerDesign.md  PaymasterWorkflow.md  RustPaymasterServerDesign.md  SigningAndKeyManagement.md  TEST_REPORT.md  TestCaseDemo.md  aNodeArchitectureDesign.md  aNodeFrameworkAndPaymasterModuleDesign.md  design-thinking.md  dev-guide.md  rust-cloudflare.md  setup-guide.md
docs/aNode-rust/: ERC4337FlowDiagram.md  ModuleDesign.md  README.md  RustWorkerCompatibility.md  SigningAndKeyManagement.md  aNodeAPIDesign.md  aNodeArchitectureDesign.md  aNodePolicySystem.md  aNodeRoadmap.md  account-abstraction-reference.md  bundler-architecture-knowledge.md  decentralized-sponsorship-system.md  design-thinking.md  ultra-relay-paymaster-integration.md
relay-server/: Cargo.toml  wrangler.toml
relay-server-backup/: Cargo.toml
relay-server-backup/src/config/: settings.rs
relay-server-backup/src/core/: gas_estimator.rs
relay-server/.wrangler/tmp/bundle-nm9GOF/: middleware-insertion-facade.js  middleware-loader.entry.ts
relay-server/.wrangler/tmp/dev-fDymfQ/: d52907f1e71527a602467fb5e4ef5c0bc2ada763-index_bg.wasm  shim.js  shim.js.map
relay-server/src/: lib.rs
relay-server/src/core/: mod.rs  paymaster.rs  policy_engine.rs  types.rs
scripts-flow/: .env.example  .gitignore  ERC4337-AB-Test-Guide.md  README-test-accounts.md  README.md  checkBalance.js  checkUserOp.js  package-lock.json  package.json  sponsorTransfer.js
scripts-flow/src/: payForUserOp.js  (+5 more)
simple-paymaster/: .env.example  API_TEST_RECORD.md  BUG_ANALYSIS_AND_SOLUTIONS.md  COMPLETE_DATA_FLOW_RECORD.md  DEPLOYMENT.md  PIMLICO_VS_SEPOLIA_ANALYSIS.md  README-E2E.md  README.md  SUCCESS_RECORD.md  USAGE.md  biome.json  check-contract-creation.mjs  check-simpleaccount.mjs  debug-paymaster.mjs  debug-signature.mjs  debug-userop-format.mjs  debug-userop-hash.mjs  deploy.md  direct-submit-test.mjs  e2e-config.example.mjs  estimate-gas-alchemy.mjs  example-usage.mjs  final-correct-submit.mjs  final-submit-correct.mjs  final-submit.mjs  generate-final-userop.mjs  generate-paymaster-signature.mjs  package-lock.json  package.json  pnpm-lock.yaml  stake-anode-paymaster.mjs  submit-new-paymaster.mjs  submit-new-userop.mjs  submit-real-userop.mjs  submit-success-userop.mjs  submit-to-chain.mjs  submit-via-alchemy.mjs  test-anode-paymaster.mjs  test-build.js  test-direct-entrypoint.mjs  (+35 more)
web-app/: ALCHEMY_ACCOUNT_KIT_LEARNING.md  README.md  final-alchemy-submit.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json  vite.config.ts
(+58 files in other folders)
