[package]
name = "anode-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["aNode Team"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
