[package]
name = "anode-rust-worker-simple"
version = "0.1.0"
edition = "2021"
authors = ["aNode Team"]
description = "Simple aNode Rust Cloudflare Worker"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ResponseInit",
] }
wasm-bindgen-futures = "0.4.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

worker = "0.0.18"
