[package]
name = "anode-cloudflare-worker"
version = "0.1.0"
edition = "2021"
authors = ["aNode Team"]
description = "aNode Cloudflare Worker - ERC-4337 Paymaster Service"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
