[package]
name = "anode-relay-server"
version = "0.0.1"
edition = "2021"
authors = ["aNode Team"]
description = "aNode Relay Server v0.01 - ERC-4337 Paymaster Service"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
